# template-python

./: .gitignore  .pre-commit.yaml  Makefile  README.md  pyproject.toml
docs/: index.rst
