[tool.poetry]
name = "{project_name}"
version = "0.1.0"
description = ""
authors = ["{your_name} <{your_email}>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^3.1.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.910"
flake8 = "^4.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.12.1"
flake8-cognitive-complexity = "^0.1.0"
pre-commit = "^2.17.0"
bandit = "^1.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py38', 'py39']
line-length = 120
exclude = """
/(
    .git
    | .venv
    | .mypy_cache
    | .pytest_cache
    | data
    | docs
    | htmlcov
    | notebook
/)
"""

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
